[gd_scene load_steps=2 format=3 uid="uid://e8d0toig87um"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_a0ot1"]

[node name="MainMenu" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0ot1")
gameScenePath = "res://sample_scene.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start game"

[node name="MusicCheckbox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="SFXCheckbox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "SFX "

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="startGame"]
[connection signal="toggled" from="VBoxContainer/MusicCheckbox" to="." method="_on_music_checkbox_toggled"]
[connection signal="toggled" from="VBoxContainer/SFXCheckbox" to="." method="_on_sfx_checkbox_toggled"]
